[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heterogt"                # 替换为你的库名
version = "0.1.0"
description = "heterogeneous graph transformer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [                # 需要时填依赖
  "numpy",
  "pandas",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["heterogt*"]          # 打包 heterogt 及其子包